<?xml version="1.0"?>
<package format="2">
  <name>realsense_postprocess</name>
  <version>0.0.0</version>
  <description>The realsense_postprocess package</description>
  <maintainer email="knagara@todo.todo">knagara</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen_conversions</depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
</package>
